# pritunl-slack-app

./: .editorconfig  .envrc.dist  .gitignore  .tool-versions  Dockerfile  README.md  flask-gunicorn.Dockerfile  lambda-function.Dockerfile  pyproject.toml  samconfig.toml  template.yaml  template.yaml.docker-image.patch
.github/: labels.yml  pr-labeler.yml  release-drafter.yml
.github/workflows/: docker-build.yml  pr-labeler.yml
pritunl_slack_app/: flask_checks.py  flask_handler.py
pritunl_slack_app/function/: function_handler.py  pritunl_slack.py  requirements.txt
pritunl_slack_app/function/pritunl_slack_app/: function_handler.py  pritunl_slack.py
pritunl_slack_app/function/pritunl_slack_app/cloud_vendor/: __init__.py
pritunl_slack_app/function/pritunl_slack_app/cloud_vendor/aws/: secretsmanager.py
