[tool.poetry]
name = "pritunl-slack-app"
version = "0.1.3"
description = "Pritunl Slack App Slash Commands"
authors = ["Nathaniel Varona <nathaniel.varona+pypi@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pritunl_slack_app"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
slack-bolt = "~1.18.0"
flask = {version = "~2.3.1", optional = true}
gunicorn = {version = "~20.1.0", optional = true}
pritunl-api = "~1.1.10"

[tool.poetry.extras]
flask =  ["flask", "gunicorn"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
