[tool.poetry]
name = "pritunl-slack-app"
version = "0.1.3"
description = "Pritunl Slack App Slash Commands"
authors = ["Nathaniel Varona <nathaniel.varona+pypi@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pritunl_slack_app"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pritunl-api = "~1.1.10"
slack-bolt = "~1.18.0"
flask = {version = "~2.3.1", optional = true}
gunicorn = {version = "~20.1.0", optional = true}
flask-healthz = {version = "^0.0.3", optional = true}
boto3 = {version = "^1.26.137", optional = true}

[tool.poetry.extras]
flask = ["flask", "gunicorn", "flask-healthz"]
aws = ["boto3"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
